fix(css): Fix field error alignment fix(css): Fix warning color

--- a/src/theme/_theme.forms.scss
+++ b/src/theme/_theme.forms.scss
@@ -1,13 +1,9 @@
 .form-container,
 form.form-container {
-  mat-autocomplete-field,
-  app-form-field,
-  .mat-mdc-form-field {
-    .mat-mdc-form-field-hint-wrapper,
-    .mat-mdc-form-field-error-wrapper {
-      padding: 0 5px;
-      word-break: break-all;
-    }
+  .mat-mdc-form-field-hint-wrapper,
+  .mat-mdc-form-field-error-wrapper {
+    padding: 0 5px;
+    word-break: break-all;
   }
 
   .mat-mdc-form-field {
