--- a/src/theme/_theme.variables.scss
+++ b/src/theme/_theme.variables.scss
@@ -62,12 +62,12 @@ html.dark {
   --ion-color-success-shade: #29c467;
   --ion-color-success-tint: #44e283;
 
-  --ion-color-warning: #ff6434;
-  --ion-color-warning-rgb: 255, 100, 52;
-  --ion-color-warning-contrast: #000000;
-  --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0bb4b;
-  --ion-color-warning-tint: #ffda48;
+  --ion-color-warning: #81321a;
+  --ion-color-warning-rgb: 129, 50, 26;
+  --ion-color-warning-contrast: #ffffff;
+  --ion-color-warning-contrast-rgb: 255, 255, 255;
+  --ion-color-warning-shade: #6c2c16;
+  --ion-color-warning-tint: #8a361c;
 
   --ion-color-danger: #fa0021;
   --ion-color-danger-rgb: 255, 0, 33;
